# SpokenNER

./: .gitignore  README.md  environment.yaml  pyproject.toml  run.py  run_evaluation.py
src/models/: Wav2Vec.py
src/services/: __init__.py  corpus.py  data_loader.py  logger.py  metrics.py  tools.py
